--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
 
-    <section id="bookmark" class=" w-100 p-3">
+    <section id="bookmark" class=" w-100 p-md-3">
       <div class="content rounded-3 w-100 py-3 px-md-5 ">
         <h1 class="text-center mb-4">Bookmarks</h1>
         <div class="w-75 mx-auto border-dots py-4 mb-3">
