--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </label>
           <input type="text" id="url" oninput="validateUrl()" placeholder="Website URL" class="w-100 form-control mt-2 mb-3 ">
           <button id="add" class="btn btn-primary px-5 mx-auto d-block" onclick="addBookmark()">
-            Supmit
+            Add
           </button>
           <button id="update" class="btn btn-warning px-5 mx-auto d-none" type="submit">
             Update
@@ -64,7 +64,7 @@
     </section>
 
     <div id="layer" class="position-absolute top-0 end-0 w-100 vh-100 d-flex justify-content-center align-items-center bg-black bg-opacity-25 d-none">
-      <div class="bg-light w-25 p-2 pt-0 rounded-3">
+      <div class="bg-light col-md-3 p-2 pt-0 rounded-3">
         <div class="d-flex justify-content-between align-items-center">
           <i class="fa-solid fa-triangle-exclamation fa-2x"></i>
           <button class="btn" onclick="cls()">
